--- a/todoapp/app/src/main/AndroidManifest.xml
+++ b/todoapp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
     package="com.example.android.architecture.blueprints.todoapp">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
